--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1034,9 +1034,10 @@ a {
     justify-content: center;
     gap: 10px;
     box-shadow: 0 4px 15px rgba(37, 99, 235, 0.3);
+    /* z-index: 99; */
 }
 
-.web-cta-button a {
+/* .web-cta-button a {
     color: white;
     text-decoration: none;
     display: flex;
@@ -1044,7 +1045,7 @@ a {
     gap: 10px;
     width: 100%;
     justify-content: center;
-}
+} */
 
 .web-cta-button:hover {
     transform: translateY(-3px);
